--- a/gog.org
+++ b/gog.org
@@ -1490,7 +1490,7 @@ Grav and Gog's attention went back to the forest-baby.
 
 They had determined as best they could that his name was Oh-Mas, although Grav wondered if /one's name/ meant the same thing to the baby as it did to them.
 
-He had an idea that /yes/, they had names /of a sort/ but /it was complicated/. Just as the instincts that forest-children have about language, in general, could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
+He had an idea that /yes/, they had names /of a sort/ but /it was complicated/. Just as the instincts that forest-children have about language in general, could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
 
 Oh-Mas too was working with fire.
 
@@ -1498,9 +1498,9 @@ He had packed a large pipe and was lighting a twig to get things going.
 
 There was a lot to know about the smoking of plant matter in the ancient jungle and woods.
 
-Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that those from strange parts, /even if those parts had all the same plant life/, usually had new discoveries to relay, and usually visa versa. It took a lot of research. In this, ancient people were experts.
+Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that those from strange parts, /even if those parts had all the same plant life/ usually had new discoveries to relay, and usually visa versa. It took a lot of research. In this, ancient people were experts.
 
-He had no whole leaves that they could inspect. Grav and Gog took small pinches as specimens and stored them safely in case it turned out there was important medicinal knowledge at stake.
+He had no whole leaves that they could inspect. Grav and Gog took small pinches of the dried crumble as specimens and stored them safely in case it turned out there was important medicinal knowledge at stake.
 
 "Gog, I think we need to go easy. There's no judging its power from appearances."
 
@@ -1530,15 +1530,15 @@ This put both men's heads squarely in the ash heap of the dead fire pit. They di
 
 They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to".
 
-Grav immediately felt the frustration of an interesting dream slipping away as he tried to recall what they had been talking about, and as with his dreams, it seemed like the memories were actively running away from him. He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
+Grav immediately felt the frustration of an interesting dream slipping away as he tried to recall what they had been talking about and as with his dreams, it seemed like the memories were actively running away from him. He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
-The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready, and a more or less normal, though very slow and very loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
+The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready and a more or less normal, though very slow and very loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
 
 They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thickness at the least. The claw, whoever's claw, was at least that long.
 
-And it belonged to an animal smart enough to start work immediately on tearing the spear-guard away from the hide altogether, which for an average sized male cat would mean sure death for them, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
+And it belonged to an animal smart enough to start work immediately on tearing the spear-guard away from the hide altogether, which for an average sized male cat would mean sure death for them, as it could probably fit a good way into the opening and its reach was enough to at least mince them up sufficiently for dying.
 
-The gaps between the vine provided enough space for Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
+The gaps between the vine provided enough space for Oh-Mas to jab it a few times pretty good to which it audibly reacted, which is a good sign.
 
 Grav and Gog went back to staring at the ceiling.
 
@@ -1546,13 +1546,15 @@ The competing battle cries got intense enough to interest them finally and they 
 
 There would be no more talking for a while.
 
-The animal, initially just hungry was now mad with rage and sought revenge. Having glimpsed the animal inside that was doing all this damage, the cat was also a bit disgusted with himself. /This little animal, and any friends it might have in there must die this night. No one must know of this./ the cat may have thought.
+The animal, initially just hungry was now mad with rage and sought revenge. Having glimpsed the animal inside that was doing all this damage, the cat was also a bit disgusted with himself. /This little animal and any friends it might have in there must die this night. No one must know of this./ the cat may have thought.
 
-Grav and Gog could now clearly see the mad beast at the end of the tunnel, the animal now taking some time to express his rage just in front of the opening, and those spikes now appearing hopelessly flimsy from their perspective.
+Grav and Gog could now clearly see the mad beast at the end of the tunnel, the animal now taking some time to express his rage just in front of the opening and those spikes now appearing hopelessly flimsy from their perspective.
 
 Whatever the danger, the two men were captivated.
 
-The cat's fangs looked like polished tin and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
+The cat's fangs looked like polished tin and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle actively holding, wielding those fangs.
+
+The face-sized symmetrical tongue tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
 
 Its "whiskers" were about the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them that seemed to refract the starlight, there suddenly seeming to be no moon or clouds, but only Unnaturally intense starlight. The stars felt /closer/ more than brighter.
 
@@ -1562,17 +1564,17 @@ His coat seemed like an eternal windswept prairie of glowing colors.
 
 His still slow, enormous breaths could be felt from within the hide, noticeably increasing the humidity.
 
-As if in place of saliva, the tiger dripped thick, almost undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
+As if in place of saliva, the tiger dripped thick, almost undiluted blood from its mouth. It had no apparent wound in its mouth but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
 
 To Grav and Gog, the cat simply drooled blood.
 
-In addition to the thick laminar blood, there was bright pink foam coming from the sides of its mouth in pluses, a bit more pushed out with each breath. It fell to the floor in small pink piles. There was no name for this color.
+In addition to the thick laminar blood, there was bright pink foam coming from the sides of its mouth in pluses; a bit more pushed out with each breath. It fell to the floor in small pink piles. There was no name for this color.
 
 More purple-pink gum would be exposed with every high screech-like roar.
 
 It was pissed.
 
-Crazed, the baby grabbed the only lit lamp and smartly slung it hard, connecting with the cat's brow, where it shattered, covering the cat with lighted pine pitch from the nearly-full lamp.
+Crazed, the baby grabbed the lit lamp and smartly slung it hard, connecting with the cat's brow where it shattered, covering the cat with lighted turpentine from the nearly-full lamp.
 
 This roused the men, both of whom scrambled together in Grav's kit to get his lamp. Gog found it first and Grav hurriedly lit some dry litter from the hide's stone floor with embers from Oh-Mas' pipe, which he set to glowing with a few puffs of breath beforehand.
 
@@ -2113,11 +2115,14 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Notes
 
+
 - Maybe the stone hide...
   - Is a mausoleum.
   - There are many more.
   - They go check out later.
-
+- Things we might want cave names for:
+  - Tin
+  - Turpentine
 - Oh-Mas seems to be heading in the direction of the hide when they first meet. Was he heading there to begin with? Does it matter?
 - In he hide, the men were having a kind of "shared dream" before the cat came. /That's why it was quickly forgotten by them/. They recall much later.
 - It would be neat to describe the "toys" given away by Thag.
