--- a/gog.org
+++ b/gog.org
@@ -1582,7 +1582,7 @@ With a heavier dried leaf from this, he finally lit his lamp. Looking up he real
 
 The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades made of fire. The liquid ran down his back, over his flanks, and also down the outside of its front legs. And the flame followed.
 
-The cat spent a few drop-stone seemingly calmed by the fire. It was pacing in a circle as if thinking of lying down.
+The cat spent a few drop-stone seemingly calmed by the fire. It was pacing and circling as if thinking of lying down.
 
 But then the cat snapped.
 
