--- a/gog.org
+++ b/gog.org
@@ -1586,7 +1586,7 @@ The cat spent a few drop-stone seemingly calmed by the fire. It was pacing and c
 
 But then the cat snapped.
 
-It charged the opening, propelling its whole body with hind legs and making synchronized swats with both forelimbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage.
+It charged the opening, propelling its whole body with its powerful hind limbs and making synchronized swats with both forelimbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage and creating a spray of leaves and loose dirt behind him.
 
 It's swatting, almost clapping, but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known to some as 'fuck your shit up mode'.].
 
