--- a/gog.org
+++ b/gog.org
@@ -1588,7 +1588,7 @@ But then the cat snapped.
 
 It charged the opening, propelling its whole body with its powerful hind limbs and making synchronized swats with both forelimbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage and creating a spray of leaves and loose dirt behind him.
 
-It's swatting, almost clapping, but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known to some as 'fuck your shit up mode'.].
+Its swatting, almost clapping but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known to some as 'fuck your shit up mode'.].
 
 All of this was accompanied by a sound that caused physical pain in their ears, a twinge of which they would feel the next day. Notes of this could be felt distinctly in one's rib cage.
 
