--- a/gog.org
+++ b/gog.org
@@ -1590,13 +1590,17 @@ It charged the opening, propelling its whole body with its powerful hind limbs a
 
 Its swatting, almost clapping but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known to some as 'fuck your shit up mode'.].
 
-All of this was accompanied by a sound that caused physical pain in their ears, a twinge of which they would feel the next day. Notes of this could be felt distinctly in one's rib cage.
+All of this was accompanied by a sound that caused physical pain in their ears; a twinge of which they would feel the next day. Notes of this could be felt distinctly in their chest.
 
 So long as it stayed where it was, all was safe.
 
-Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cat's fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
+Things began to feel unsafe for the men when they looked at its eyes.
 
-On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky about which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
+To say nothing of the color or patterns in the cat's fist-sized eyes, there was clearly /movement/.
+
+The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns circled together in a kind of whirlpool "draining" into a black void at the center.
+
+On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with keen eyes and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky about which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
 
 If the sky is clear, you could see the great-river-bottom[fn:: The Milky Way] from anywhere. This was this same kind of "pigment" used to paint these other, fainter shapes. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
 
