--- a/gog.org
+++ b/gog.org
@@ -1598,7 +1598,7 @@ Things began to feel unsafe for the men when they looked at its eyes.
 
 To say nothing of the color or patterns in the cat's fist-sized eyes, there was clearly /movement/.
 
-The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns circled together in a kind of whirlpool "draining" into a black void at the center.
+The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns circled together in a kind of whirlpool "draining" into the black void at the center of each eye.
 
 On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with keen eyes and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky about which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
 
