--- a/gog.org
+++ b/gog.org
@@ -1602,9 +1602,11 @@ The cat seemed to have swirls of blue-green, glossy black, silver, and colors th
 
 On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with keen eyes and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky about which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
 
-If the sky is clear, you can see the great-river-bottom[fn:: The Milky Way] from just about anywhere. This was the same kind of "pigment" used to paint these other, fainter shapes high in the sky that few had seen first-hand. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
+When the nigh sky is clear, you can see the great-river-bottom[fn:: The Milky Way] from just about anywhere. This was the same kind of "pigment" used to paint these other, fainter shapes high in the sky that few had seen first-hand. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
 
 One of these high-night-ghosts[fn:: Nebulae] was a kind of swirl shape, though one seen at an angle[fn:: Andromeda.] It had been given the name 'Ender's-Sink'.
+
+The cat had distinct, dazzling high-night-ghost swirls for eyes.
 
 A more relatable example to most Crec would be the appearance of a whirlpool going down a natural sink, especially when different kinds of flowering duckweed and floating debris give it some character and shows its "arms".
 
