--- a/gog.org
+++ b/gog.org
@@ -1370,7 +1370,7 @@ Thag made his most enthusiastic wave goodbye. His one arm being a disproportiona
 
 Grav and Gog were faced with spending the night, baring a miracle, in the most dangerous place possible, only because a much greater danger had recently moved into the area like bad weather, but worse.
 
-This was part of the life-long education the men had about lizard-birds.  The woods were safer but not safe. It also was the only reasonable choice with a lizard-bird in the area, most of all at night.
+This was part of the life-long education the men had about lizard-birds:  The woods were safer but not safe. It also was the only reasonable choice with a lizard-bird in the area, most of all at night.
 
 This was definitely toward the end of the curriculum, but they both knew the approximate odds of either choice and chose the least bad: They would be spending the night on the edge of Small Woods, somehow or other.
 
