--- a/gog.org
+++ b/gog.org
@@ -1404,7 +1404,7 @@ Bringing a spearhead down flat and sharply on top of some of the bigger spiders 
 
 It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb checking the point for sharpness at intervals[fn:: This is a nervous habit that is frowned upon by the Crec. They call it 'worrying your point' and it's used metaphorically to mean 'getting worked up over nothing'. This /will/ dull a fire-hardened spear point on the scale of days.].
 
-Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuating his song with rhythmic coos, mummers, and occasionally a delighted squeal.
+Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuating his song with rhythmic coos, murmurs, and occasionally a delighted squeal.
 
 This did nothing to take away from the uncanniness of this swaggering baby.
 
