--- a/gog.org
+++ b/gog.org
@@ -1408,7 +1408,7 @@ Though he had a mostly normal speaking voice, if a bit high-pitched, his singing
 
 This did nothing to take away from the uncanniness of this swaggering baby.
 
-It was getting dark but was not yet killing-palm. The forest-child seemed unbothered and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
+It was getting dark but was not yet killing-palm. The forest-child seemed unbothered and was now making occasional tight turns, as though the party had switched to surface streets and was almost home; there seemed to be a /destination/ coming up.
 
 Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not natural in origin but was just as clearly very old.
 
