--- a/gog.org
+++ b/gog.org
@@ -1412,7 +1412,7 @@ It was getting dark but was not yet killing-palm. The forest-child seemed unboth
 
 Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not natural in origin but was just as clearly very old.
 
-It was made out of stone that had been squared. The stones were entirely faceted with flat surfaces cut to meet those of adjoining stones. The patterns made by these joints on the outer walls were irregular. The walls were nonetheless very flat both inside and out.
+It was made out of stone that had been squared. The stones were faceted with flat surfaces cut to meet those of adjoining stones. The patterns made by these joints on the outer walls were irregular. The walls were nonetheless very flat both inside and out.
 
 Any roundness found in the stones appeared to be from erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
 
