--- a/gog.org
+++ b/gog.org
@@ -1454,7 +1454,7 @@ They both noted how some of the living vine of the portico was grown soundly int
 
 They looked around as best they could in the dark hide. Gog was rustling through his kit, trying to get the ingredients necessary for light.
 
-Soon Gog was making a noise and a sight that instantly got the attention of the other two. In the complete dark of the hide there was a bright flash accompanied by a click. Then another. Under normal circumstances, Grav would be taunting Gog about his fire-making skills, but this time he was wishing him nothing but quick success.
+Soon Gog was making a noise and a sight that instantly got the attention of the other two. In the complete dark of the hide there was a sharp /click/ sound accompanied by a bright flash. Under normal circumstances, Grav would be taunting Gog about his fire-making skills, but this time he was wishing him nothing but quick success.
 
 After all-finger or so clicks, there was a blue flash and then a growing flame of warm yellow.
 
