--- a/gog.org
+++ b/gog.org
@@ -1460,7 +1460,7 @@ After all-finger or so clicks, there was a blue flash and then a growing flame o
 
 Gog was holding an unfired clay oil lamp with a small, bright, efficient flame at the tip of its sturdy, short nozzle.
 
-This was a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. The finish itself was thick enough to provide some impact protection, which is a big concern for some of the fragile things you drug around the Forest with you. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave off a distinct comforting smell; grandma, warm fires, salad days.
+This was a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. The finish itself was thick enough to provide some impact protection, which is a big concern for some of the fragile things you drug around the Forest with you. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel once it made its way through to the interior. Old lamps gave off a distinct comforting smell; grandma, warm fires, salad days.
 
 For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price.
 
