--- a/gog.org
+++ b/gog.org
@@ -1464,7 +1464,7 @@ This was a kind of travel lamp carried in nearly all kits. Though porous, the ou
 
 For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price.
 
-Oil was pretty expensive. Wherever you got it, the person you obtained it from acquired it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stockbroker. Maybe you mine gems with your bare hands.
+Oil was pretty expensive. Wherever you got it, the person you obtained it from acquired it in the same way you yourself could have. Your time was worth what his was, so you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some; a lot, in other words. But such value could be obtained in completely different ways: Maybe you're a modern stockbroker. Maybe you mine gems with your bare hands.
 
 Of course, they had the nicest oil. It also happened to be rather a cheap one as luck would have it. Most considered its smell to be a downside. They thought just the opposite. The lightly refined turpentine[fn:: More or less.] they preferred burned predictably, gave little smoke, had a bright, well-colored flame, and smelled to them like an exhausting day productively working with lumber. It was a nice, crafty kind of smell.
 
