--- a/gog.org
+++ b/gog.org
@@ -1482,7 +1482,7 @@ Missing conch would mean first getting all-finger lashes, then attending CO lect
 
 The last palm of woods would not be entirely quiet even after dawn, there often being predators putting in long nights. They were balancing the various penalties they were facing with their reckoned odds of getting eaten by one thing or another along the way.
 
-It was not unusual for a lizard-bird to continue its hunt until daylight. The men did have clear skies and a sliver of morning-moon in their favor.
+It was not unusual for a lizard-bird to continue its hunt until daylight. The men would have clear skies and a sliver of morning-moon in their favor.
 
 /Play it by ear; we're safe for now/ was the unspoken conclusion. There was nothing tangible they could do about any of it at this point.
 
