--- a/gog.org
+++ b/gog.org
@@ -1532,7 +1532,9 @@ They were both staring at the ceiling. They had been in a long, convoluted conve
 
 Grav immediately felt the frustration of an interesting dream slipping away as he tried to recall what they had been talking about and as with his dreams, it seemed like the memories were actively running away from him. He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
-The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready. Between Oh-Mas' snarls, there was a low sound; a more or less normal, though very slow and very loud breathing from something enormous.
+The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready. Between Oh-Mas' snarls, there was a sort of rumbling sound; a more or less normal, though very slow and very loud breathing from something enormous.
+
+And there was a kind of crackling sound. It was like the sound of a far-overloaded hemp basket being lifted by its handles.
 
 They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thickness at the least. The claw, whoever's claw, was at least that long.
 
