--- a/gog.org
+++ b/gog.org
@@ -1538,7 +1538,7 @@ And there was a kind of crackling sound. It was like the sound of a far-overload
 
 They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thickness at the least. The claw, whoever's claw, was at least that long.
 
-In the lamp light, they could both see the dust created by the animal's effort to tear away the spear-guard. They could also see the spear-guard itself flex alarmingly.
+In the lamp light, they could both see the dust created by the animal's effort to tear away the spear-guard. They could also see the spear-guard itself flexing alarmingly.
 
 The claws, they had seen two at once by this point, belonged to an animal smart enough to start work immediately on tearing the entrance-way away from the hide altogether. The claws were unmistakably those of a tooth-cat.
 
