--- a/gog.org
+++ b/gog.org
@@ -1544,7 +1544,7 @@ The claws, they had seen two at once by this point, belonged to an animal smart 
 
 Were the spear-guard torn away, it would mean sure death for them, as an average adult cat could probably fit a good way into the opening and its reach was enough to at least mince them up sufficiently for dying.
 
-The gaps between the vine provided enough space for Oh-Mas to jab it a few times pretty good to which it audibly reacted, which is a good sign.
+The gaps between the vine provided enough space for Oh-Mas to jab it a few times pretty good to which it reacted audibly, which is a good sign.
 
 Grav and Gog went back to staring at the ceiling.
 
