--- a/gog.org
+++ b/gog.org
@@ -1560,7 +1560,7 @@ Whatever the danger, the two men were captivated.
 
 The cat's fangs looked like polished tin and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle actively holding, wielding those fangs.
 
-The face-sized symmetrical tongue tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
+The face-sized symmetrical tongue tucked far back in its throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
 
 Its "whiskers" were about the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them that seemed to refract the starlight, there suddenly seeming to be no moon or clouds, but only Unnaturally intense starlight. The stars felt /closer/ more than brighter.
 
