--- a/gog.org
+++ b/gog.org
@@ -1430,11 +1430,11 @@ As the front of the hide came into view, they could see that some rather sophist
 
 It was not a particularly inviting entrance. This structure was solely for the purpose of protecting the occupants.
 
-This was a low, two man long sort of arched hallway made from woven and somewhat living vine. The walls of this tunnel were lined with dozens of sharpened, springy saplings all anchored at their base to the wall, hanging at lazy angles near the wall and all pointing outward.
+This was a low, two man long sort of arched hallway made from woven and somewhat living vine. The entire archway was lined with sharpened, springy saplings all anchored at their base to the wall, hanging at lazy angles near the wall and all pointing outward.
 
 This is a contrivance that the men were familiar with. Something like this was used sometimes to protect the opening of a cave from anything big enough to be a threat to humans.
 
-Looking inward one's eyes were met by the tips of many, usually all-finger all-finger or more fire-hardened points made from fist-diameter, half-man long saplings chosen for their stiffness, making entrance impossible for a crazed predator but still allowing a human to enter, patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
+Looking inward one's eyes were met by the tips of many, usually all-finger all-finger or more fire-hardened points made from fist-diameter, half-man long saplings chosen for their stiffness, making entrance impossible for a crazed predator but still allowing a human to enter, patiently move spikes out of the way, using arms and legs to retain the ones already past, going slowly and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
 
 This was referred to in standard Crecspeak as a spear-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
@@ -1564,7 +1564,7 @@ The face-sized symmetrical tongue tucked far back in its throat had spikes on it
 
 Its "whiskers" were about the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them that seemed to refract the starlight, there suddenly seeming to be no moon or clouds, but only Unnaturally intense starlight. The stars felt /closer/ more than brighter.
 
-His coat was shades of orange, yellow, and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer and flow not with wind but with each of his movements. For some reason, they could not imagine there being any wind out there.
+His coat was shades of orange, yellow, and black that, as with a lot of these colors, they could not really describe other than to say they were 'glowing', even the black. The fur seemed to shimmer and flow not with wind but with each of his movements. For some reason, they could not imagine there being any wind out there.
 
 His coat seemed like an eternal windswept prairie of glowing colors.
 
