--- a/gog.org
+++ b/gog.org
@@ -2127,7 +2127,11 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Notes
 
-
+- An explanation about "advanced vs caveman-stupid" contradictions.
+  - How can they build that badass palace and not know to tie a vine to a rock.
+  - How can they not know about: rope, other obvious stuff?
+  - Partial answer: the palace is BIG. Not much thought or fine work required; just lug around squared off tree trunks.
+  - Water works another possible "advanced" thing they seem too stupid for.
 - Maybe the stone hide...
   - Is a mausoleum.
   - There are many more.
